--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install requests
+        run: pip install openai
 
       - name: Collect PR diff
         env:
