--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -17,8 +17,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests
-        run: pip install openai
+        run: pip install requests openai
 
       - name: Collect PR diff
         env:
