--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,5 +45,5 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            🤖 **Gemini Review Output**
+            🤖 **Code Review Output**
             ${{ steps.get_output.outputs.text }}
