--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,4 @@
-name: PR Check Demo
+name: Code Review
 
 on:
   pull_request:
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-        run: python scripts/collect_diff.py
+        run: python scripts/main.py
 
       - name: Get Gemini output
         id: get_output
